--- a/project.html
+++ b/project.html
@@ -222,7 +222,7 @@
             <div class="watermark">Engineering & Systems</div>
 
             <div class="project-grid">
-                <a href="#" class="project-card">
+                <a href="https://github.com/Ranakghosh7/Explorer" class="project-card">
                     <div class="card-icon">🎬</div>
                     <div class="card-info">
                         <h3>Movie Explorer</h3>
@@ -238,7 +238,7 @@
                     </div>
                 </a>
 
-                <a href="#" class="project-card">
+                <a href="https://github.com/Ranakghosh7/stupid_game" class="project-card">
                     <div class="card-icon">👾</div>
                     <div class="card-info">
                         <h3>Stupid Game</h3>
@@ -246,7 +246,7 @@
                     </div>
                 </a>
                 
-                 <a href="#" class="project-card">
+                 <a href="https://github.com/Ranakghosh7/Rental_System" class="project-card">
                     <div class="card-icon">🚗</div>
                     <div class="card-info">
                         <h3>Rental System</h3>
