Update project links in work.html

--- a/work.html
+++ b/work.html
@@ -222,7 +222,7 @@
             <div class="watermark">Research & AI</div>
             
             <div class="project-grid">
-                <a href="https://github.com/Ranakghosh7/CloudClimateML" target="_blank" class="project-card">
+                <a href="https://github.com/Ranakghosh7/AWS-ClimateML" target="_blank" class="project-card">
                     <div class="card-icon">☁️</div>
                     <div class="card-info">
                         <h3>CloudClimateML</h3>
@@ -260,7 +260,7 @@
             <div class="watermark">PROJECTS</div>
 
             <div class="project-grid">
-                <a href="#" class="project-card">
+                <a href="https://github.com/Ranakghosh7/Explorer" class="project-card">
                     <div class="card-icon">🎬</div>
                     <div class="card-info">
                         <h3>Movie Explorer</h3>
@@ -276,7 +276,7 @@
                     </div>
                 </a>
 
-                <a href="#" class="project-card">
+                <a href="https://github.com/Ranakghosh7/stupid_game" class="project-card">
                     <div class="card-icon">👾</div>
                     <div class="card-info">
                         <h3>Stupid Game</h3>
@@ -284,7 +284,7 @@
                     </div>
                 </a>
                 
-                 <a href="#" class="project-card">
+                 <a href="https://github.com/Ranakghosh7/Rental_System" class="project-card">
                     <div class="card-icon">🚗</div>
                     <div class="card-info">
                         <h3>Rental System</h3>
