--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
       <p>To build an automated writing feedback generator that detects and mitigates linguistic and demographic biases.</p>   
     </div>
     <div class="job">
+      <h4>Rainfall Prediction Classifier</h4>
+      <p>MLOps & Production AI </p>
+      <p>Python, FastAPI, Docker, Scikit-Learn. Full-stack machine learning pipeline featuring automated data preprocessing, modular model training, and a containerized REST API for real-time weather forecasting.</p>   
+    </div>
+
+    <div class="job">
       <h4>NeuroFlow.js</h4>
       <p>Deep Learning Framework / JavaScript</p>
       <p>A fully modular machine-learning suite built on TensorFlow.js, designed to demonstrate the internal architecture of neural networks.</p>   
