Add Rainfall Prediction Classifier project card

--- a/work.html
+++ b/work.html
@@ -238,6 +238,19 @@
                     </div>
                 </a>
 
+
+                  <a href="https://github.com/Ranakghosh7/Rainfall_Prediction_Classifier" class="project-card">
+    <div class="card-icon">🌧️</div>
+    <div class="card-info">
+        <h3>Rainfall Prediction Classifier</h3>
+        <p>End-to-end ML pipeline with Docker & FastAPI for real-time weather forecasting.</p>
+    </div>
+</a>
+
+
+
+
+                
                 <a href="https://github.com/Ranakghosh7/NeuroFlow.js" target="_blank" class="project-card">
                     <div class="card-icon">🧠</div>
                     <div class="card-info">
